fix cosco configuration indent

--- a/0 Network and TCP-IP overview/Network and TCP-IP overview.fa.tex
+++ b/0 Network and TCP-IP overview/Network and TCP-IP overview.fa.tex
@@ -54,7 +54,7 @@
 \end{otherlanguage}
 
 \part{ادوات شبکه}
-\section{کابل‌ها}
+\section{اتصالات}
 در این بخش توضیحاتی در رابطه با ادوات شبکه قرار می‌گیرد.
 \subsection{سیمی}
 انواع ارتباطات سیمی
