--- a/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
+++ b/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
@@ -87,7 +87,7 @@
     \begin{lstlisting}[language={cisco}]
 config term
     no ip routing
-    bridge 1 protocol ieee # for STP protocol
+    bridge 1 protocol ieee ! for STP protocol
     int f0/0
         ip addr 128.238.61.1 255.255.255.0
         bridge-group 1
