--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -100,13 +100,13 @@
 socket -u -i -n200 remote-host echo
     \end{lstlisting}
     
-    \begin{report}
+    \begin{question}
     \item Calculate the average collision rate over all the hosts for the set of statistics you collected in this exercise.
-    \end{report}
+    \end{question}
 
 \part{ARP Exercises}
-    In the following experiment, we shall examine the host ARP table and the ARP operation, including two interesting cases: proxy ARP and gratuitous ARP. You may need to ask the lab instructor for the MAC addresses of the host and router interfaces, and record these MAC addresses in Table A.1 and Table A.2 in the appendix.
-    You need these MAC addresses for the exercises and lab report.
+    In the following experiment, we shall examine the host ARP table and the ARP operation, including two interesting cases: proxy ARP and gratuitous ARP. You may need to find \textbf{MAC} addresses of the host and router interfaces, and record these \textbf{MAC} addresses.
+    You need these \textbf{MAC} addresses for the exercises and lab report (as table of host and \textbf{MAC}).
 
 \section{ARP Table}
     Use \lstinline{arp -a} to see the entire ARP table.
@@ -120,7 +120,7 @@ arp -d remote-host
     \end{lstlisting}
 
     Save the ARP table for your lab report.
-
+    
     While \lstinline{tcpdump -en}\footnote{You can add \lstinline{-x} flag to see hex dump.} is running, \lstinline{ping} a remote host that has no entry in your host ARP table.
     Then terminate the \lstinline{tcpdump} program.
 
@@ -142,7 +142,7 @@ arp -d remote-host
     Your report should include the answers for the following questions.
     \begin{itemize}
         \item What is the target IP address in the ARP request?
-        \item At the MAC layer, what is the destination Ethernet address of the frame carrying the ARP request?
+        \item At the \textbf{MAC} layer, what is the destination Ethernet address of the frame carrying the ARP request?
         \item What is the \texttt{frame} type field in the Ethernet frame?
         \item Who sends the ARP reply?
     \end{itemize}
@@ -161,8 +161,10 @@ arp -d remote-host
     \end{report}
 
 \section{ARP Proxy}
-    The network topology for this proxy ARP exercise is shown in Fig. 2.9. We will divide the group into two subnets interconnected by a router. The IP addresses and network masks for the hosts are also given in Fig. 2.9. Change the IP address and network mask of your host accordingly (see Section 2.3.2). The IP addresses and network masks of the \textit{Router4} interfaces are the same as their default settings.
-    Note that the network mask of the hosts in the 128.238.65.0 network is 255.255.0.0.
+    The network topology for this proxy ARP exercise is shown in Fig. 2.9. The IP addresses and network masks for the hosts are also given in Fig. 2.9. Change the IP address and network mask of your host accordingly (see Section 2.3.2). Change the IP addresses and network masks of the \textit{Router4} interfaces according to Fig. 2.9.
+
+    \paragraph{Note} Network mask of the hosts in the 128.238.65.0 network is 255.255.0.0.
+    \paragraph{Note} Only use \textit{h0, h1, h4, h5} hosts (Do not start extra hosts).\\
 
     Set IP of each network by running the following command in the hosts:
     \begin{enumerate}
@@ -176,6 +178,7 @@ arp -d remote-host
         \item Enter the \textit{Global Configuration} mode by typing \lstinline[language={cisco}]{config term}.
         \item Then type the following lines for each interfaces:
         \begin{lstlisting}[language={cisco}, escapechar={@}, emph={x}]
+config term
     interface f0/0 ! use f0/1 for the other interface@\footnote{The name of the router interfaces may be different for various routers. You can find the names by typing \texttt{write term} in the \textit{Privilege EXEC} mode.}@
         ip addr x.x.x.x 255.255.255.0
         no shut
@@ -187,10 +190,10 @@ wr
     
     Now \textit{Router4}’s \textit{ethernet1} interface can perform proxy ARP for the hosts in the 128.238.64.0 subnet.
 
-    Run \lstinline{tcpdump -enx} on all the hosts.
+    Run \lstinline{tcpdump -enx} on the \textit{h1} and \textit{h5}.
 
     Then let the hosts in the 128.238.65.0 subnet send UDP datagrams to the hosts in the 128.238.64.0 subnet.
-    For example, on \textit{h7} type:
+    For example, on \textit{h4} type:
     \begin{lstlisting}[emph={host-in-64-0-subnet}]
 socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     \end{lstlisting}
@@ -202,15 +205,13 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
 
     After the lab instructor restores the network into a single subnet (see Fig. 1.3), change the IP address and network mask of your host’s interface back to their default values as in Fig. 1.3.
 
-    Exchange your data saved in this exercise with a student working in the other subnet.
-
     \begin{figure}[H]
         \centering
             \begin{tikzpicture}
-                \draw (0*2,3) node[draw,fill=white] (h0) {h0} -- +(0,-0.75) +(0,+0.5) node {\scriptsize 65.100/16};
-                \draw (1*2,3) node[draw,fill=white] (h1) {h1} -- +(0,-0.75) +(0,+0.5) node {\scriptsize 65.101/16};
-                \draw (2*2,3) node[draw,fill=white] (h2) {h2} -- +(0,-0.75) +(0,+0.5) node {\scriptsize 65.102/16};
-                \draw (3*2,3) node[draw,fill=white] (h3) {h3} -- +(0,-0.75) +(0,+0.5) node {\scriptsize 65.103/16};
+                \draw (0*2,3) node[draw,fill=white] (h0) {h0} -- +(0,-0.75) +(0,+0.5) node {\scriptsize 64.100/24};
+                \draw (1*2,3) node[draw,fill=white] (h1) {h1} -- +(0,-0.75) +(0,+0.5) node {\scriptsize 64.101/24};
+                \draw (2*2,3) node[draw,fill=white] (h2) {h2} -- +(0,-0.75) +(0,+0.5) node {\scriptsize 64.102/24};
+                \draw (3*2,3) node[draw,fill=white] (h3) {h3} -- +(0,-0.75) +(0,+0.5) node {\scriptsize 64.103/24};
                 \draw (0*2,0) node[draw,fill=white] (h4) {h4} -- +(0,+0.75) +(0,-0.5) node {\scriptsize 65.104/16};
                 \draw (1*2,0) node[draw,fill=white] (h5) {h5} -- +(0,+0.75) +(0,-0.5) node {\scriptsize 65.105/16};
                 \draw (2*2,0) node[draw,fill=white] (h6) {h6} -- +(0,+0.75) +(0,-0.5) node {\scriptsize 65.106/16};
@@ -232,7 +233,7 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
 
     \item Why can a host in the 128.238.65.0 subnet reach a host in the 128.238.64.0 subnet, even though they have different subnet IDs?
 
-    \item What are the MAC addresses corresponding to hosts in the 128.238.64.0 subnet, in the ARP table of a host in the 128.238.65.0 subnet?
+    \item What are the \textbf{MAC} addresses corresponding to hosts in the 128.238.64.0 subnet, in the ARP table of a host in the 128.238.65.0 subnet?
 
     \item Give one advantage and one disadvantage of using proxy ARP.
     \end{report}
@@ -246,7 +247,7 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     \begin{report}
     \item What is the purpose of gratuitous ARP?
 
-    \item List the sender IP address, target IP address, sender MAC address, and target MAC address of the gratuitous ARP you saved.
+    \item List the sender IP address, target IP address, sender \textbf{MAC} address, and target \textbf{MAC} address of the gratuitous ARP you saved.
     \end{report}
 
 
@@ -262,7 +263,10 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
 
 \section{ICMP Port Unreachable}
     While running \lstinline[emph={your-host, remote-host}]{tcpdump -x -s 70 host your-host and remote-host}, execute the following \lstinline{socket} command to send a UDP datagram to the remote host:
-    \lstinline[emph={your-host, remote-host}]{socket -i -u -n1 -w1000 remote-host 88888}.
+
+    \begin{lstlisting}[emph={your-host, remote-host}]
+        socket -i -u -n1 -w1000 remote-host 88888
+    \end{lstlisting}
 
     Save the \lstinline{tcpdump} output for the lab report.
 
@@ -283,24 +287,19 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
 \part{Exercises with IP address and subnet mask}
     In this section, we will observe what happens when the same IP address is assigned to two different hosts.
     We will also set an incorrect subnet mask for hosts and see what are the consequences.
-    For the next two exercises, we split the current single segment network into two segments, Group A and Group B as shown in Table 2.3, so that they will not interfere with each other.
+    For the next two exercises, we use only four host from single segment network (Fig 1.3).
 
     \begin{table}[H]
         \caption{\textit{Table 2.3.} Host IP addresses and network masks for \textit{11 Duplicate IP}}
         \centering
         \begin{tabular}{ c c c c }
             \hline \hline
-            Group & Host & IP Address & Subnet Mask \\
+            Host & IP Address & Subnet Mask \\
             \hline 
-            Group A & h0 & 128.238.66.100 & 255.255.255.0 \\
-                    & h1 & 128.238.66.100 & 255.255.255.0 \\
-                    & h2 & 128.238.66.102 & 255.255.255.0 \\
-                    & h3 & 128.238.66.103 & 255.255.255.0 \\
-                    \hline
-            Group B & h4 & 128.238.66.104 & 255.255.255.0 \\
-                    & h5 & 128.238.66.104 & 255.255.255.0 \\
-                    & h6 & 128.238.66.106 & 255.255.255.0 \\
-                    & h7 & 128.238.66.107 & 255.255.255.0 \\
+            h0 & 128.238.66.100 & 255.255.255.0 \\
+            h1 & 128.238.66.100 & 255.255.255.0 \\
+            h2 & 128.238.66.102 & 255.255.255.0 \\
+            h3 & 128.238.66.103 & 255.255.255.0 \\
             \hline \hline
             \end{tabular}
     \end{table}
@@ -314,17 +313,17 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     Then, do the following three experiments.
 
     \begin{enumerate}
-        \item Execute \lstinline{telnet} from one of two hosts with the duplicate IP address to a host with unique IP address (e.g.\ \textit{h0} $\rightarrow$ \textit{h2} in Group A and \textit{h4} $\rightarrow$ \textit{h6} in Group B).
+        \item Execute \lstinline{telnet} from one of two hosts with the duplicate IP address to a host with unique IP address (e.g.\ \textit{h0} $\rightarrow$ \textit{h2}).
 
-        Now, from the other host with the duplicate IP address, execute \lstinline{telnet} command to the same host (\textit{h1} $\rightarrow$ \textit{h2} or \textit{h5} $\rightarrow$ \textit{h6}).
+        Now, from the other host with the duplicate IP address, execute \lstinline{telnet} command to the same host (\textit{h1} $\rightarrow$ \textit{h2}).
 
         Observe what happens and save the \lstinline{tcpdump} output and the ARP tables in all the hosts in your group.
         
-        \item Execute \lstinline{telnet 128.238.66.100} (or \lstinline{telnet 128.238.66.104}) from \textit{h2} (or \textit{h6}).
+        \item Execute \lstinline{telnet 128.238.66.100} (or \lstinline{telnet 128.238.66.104}) from \textit{h2}.
         Which host provides the telnet connection?
         Why?
         
-        \item Execute \lstinline{telnet 128.238.66.100} (or \lstinline{telnet 128.238.66.104}) from \textit{h3} (or \textit{h7}). Which host is connected to \textit{h3} (or \textit{h7})? Why?
+        \item Execute \lstinline{telnet 128.238.66.100} (or \lstinline{telnet 128.238.66.104}) from \textit{h3}. Which host is connected to \textit{h3}? Why?
     \end{enumerate}
     
     \begin{report}
@@ -333,22 +332,22 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     \end{report}
 
 \section{IP Subnets}
-    Change the host IP addresses and the subnet masks as shown in Table 2.4. Since we still have two separate segments, Groups A and B can do the exercise independently.
-    Note that two hosts in each group (\textit{h0} and \textit{h3} in Group A, or \textit{h4} and \textit{h7} in Group B) are assigned an incorrect subnet mask.
+    Change the host IP addresses and the subnet masks as shown in Table 2.4.
+    Note that two hosts in each group (\textit{h0} and \textit{h3}) are assigned an incorrect subnet mask.
 
     Capture the packets with \lstinline{tcpdump -e} for the following cases.
 
     \begin{enumerate}
-        \item When \textit{h0} (\textit{h4}) \lstinline{ping}s one of the hosts that have the correct subnet mask.
+        \item When \textit{h0} \lstinline{ping}s one of the hosts that have the correct subnet mask.
         
-        \item When \textit{h3} (\textit{h7}) \lstinline{ping}s one of the hosts that have the correct subnet mask.
+        \item When \textit{h3} \lstinline{ping}s one of the hosts that have the correct subnet mask.
 
-        Now, copy the output displayed from the \lstinline{ping} window in \textit{h3} (\textit{h7}).
+        Now, copy the output displayed from the \lstinline{ping} window in \textit{h3}.
         Share the saved output message with other students.
         
-        \item When a host with the correct subnet mask \lstinline{ping}s \textit{h0} (\textit{h4}).
+        \item When a host with the correct subnet mask \lstinline{ping}s \textit{h0}.
         
-        \item When a host with the correct subnet mask \lstinline{ping}s \textit{h3} (\textit{h7}).
+        \item When a host with the correct subnet mask \lstinline{ping}s \textit{h3}.
     \end{enumerate}
     
     To avoid confusion, only one machine in each group should generate traffic in each case.
@@ -356,25 +355,20 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     \begin{table}[H]
         \caption{\textit{Table 2.4.} Host IP addresses and network masks for \textit{12 IP subnet}}
         \centering
-        \begin{tabular}{ c c c c }
+        \begin{tabular}{ c c c }
             \hline \hline
-            Group & Host & IP Address & \makebox[7.3em][c]{Subnet Mask} \\
+            Host & IP Address & \makebox[7.3em][c]{Subnet Mask} \\
             \hline 
-            Group A & h0 & 128.238.66.100 & \makebox[7.3em][l]{255.255.255.240} \\
-                    & h1 & 128.238.66.101 & \makebox[7.3em][l]{255.255.255.0} \\
-                    & h2 & 128.238.66.102 & \makebox[7.3em][l]{255.255.255.0} \\
-                    & h3 & 128.238.66.120 & \makebox[7.3em][l]{255.255.255.240} \\
-                    \hline
-            Group B & h4 & 128.238.66.104 & \makebox[7.3em][l]{255.255.255.240} \\
-                    & h5 & 128.238.66.105 & \makebox[7.3em][l]{255.255.255.0} \\
-                    & h6 & 128.238.66.106 & \makebox[7.3em][l]{255.255.255.0} \\
-                    & h7 & 128.238.66.121 & \makebox[7.3em][l]{255.255.255.240} \\
+            h0 & 128.238.66.100 & \makebox[7.3em][l]{255.255.255.240} \\
+            h1 & 128.238.66.101 & \makebox[7.3em][l]{255.255.255.0} \\
+            h2 & 128.238.66.102 & \makebox[7.3em][l]{255.255.255.0} \\
+            h3 & 128.238.66.120 & \makebox[7.3em][l]{255.255.255.240} \\
             \hline \hline
             \end{tabular}
     \end{table}
     
     \begin{report}
     \item Explain what happened in each case according to the \lstinline{tcpdump} outputs saved.
-    Explain why \textit{h3} (or \textit{h7} in Group B) could not be reached from other hosts, whereas \textit{h0} (or \textit{h4} in Group B), which has the same incorrect subnet mask, could communicate with the other hosts.
+    Explain why \textit{h3} could not be reached from other hosts, whereas \textit{h0}), which has the same incorrect subnet mask, could communicate with the other hosts.
     \end{report}
 \end{document}
