chapter 7: fix appendix

--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -467,13 +467,13 @@ show ip pim interface   ! Displays router interface configurations.
     \end{lstlisting}
 
 \subsection{Cisco~IOS Multicast Diagnostic Tools}
-    \begin{itemize}
-        \item \lstinline[language={cisco}]{mtrace}
-        \item \lstinline[language={cisco}]{mrinfo}
-        \item \lstinline[language={cisco}]{mstat}
-        \item \lstinline[language={cisco}]{ping}
-    \end{itemize}
-
+\begin{lstlisting}[language={cisco}]
+mtrace
+mrinfo
+mstat
+ping
+\end{lstlisting}
+    
     \end{subappendices}
 \end{appendices}
 
