--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -75,14 +75,11 @@ ping -sv remote-host
     \item What are the source and destination addresses in the IP and Ethernet headers of a packet that went from the router to your partner’s machine?
     
     \item Answer the above two questions, but now for the echo reply that was returned from your partner’s machine.
-    \end{report}
-    
-    \begin{report}
+
     \item Use the \lstinline{tcpdump} outputs from both machines to calculate the average delay that a packet experienced in the router. Note that the system times of the two machines might be different. Show all the steps and submit the \lstinline{tcpdump} outputs with your report.
     
     \item Compare this value with the previous value in the case of the bridge. Which, a router or a bridge, is faster? Why?
     \end{report}
-
 
 \part{RIP Exercises}
     In this section, we will examine the operation of RIP. To enable the RIP routing process in a router, use the following commands in the \textit{Global Configuration} mode.
@@ -174,7 +171,7 @@ Router(config)# no router rip
     Also, make sure that your workstation has no other routing entries than your own subnet and your loopback interface.
     For how to remove an entry from the host routing table, see Section 4.3.
 
-    Run the RIP process in each router.
+    Configure the RIP in each router.
     To avoid confusion, each router should be configured by only one person.
 
     After starting RIP in all the routers, test connections to other hosts by pinging them.
@@ -188,7 +185,7 @@ tcpdump -x -s 100 -c 4 udp port 520
 
     Mark and print two different RIP messages captured in your subnet (see Exercise 6 of Chapter 1).
     Exchange the printed RIP messages with students in other groups.
-    You need eight different RIP messages for your lab report.
+    You need four different RIP messages for your lab report.
     
     \begin{report}
     \item Explain why you can only get two different RIP messages in your subnet.
@@ -248,7 +245,7 @@ tcpdump -x -s 100 -c 4 udp port 520
         \item Compare the original routing table with the new routing table. Explain the meaning of the flags of the new entry.
     \end{report}
 
-\section{Router Discovery}
+\section{**Router Discovery}
     This exercise is on ICMP router discovery.
     
     Connect the routers and hosts and change the host IP addresses as shown in Fig. 4.12.
@@ -310,23 +307,25 @@ Router(config)# router ospf process-id
 Router(config-router)# network address wildcard-mask area area-id
     \end{lstlisting}
     
-    \textit{process-id} is a numeric value local to the router.
-    It does not have to match \textit{process-id}s on other routers.
+    \begin{itemize}
+        \item \lstinline{process-id} is a numeric value local to the router.
+    It does not have to match \lstinline{process-id}s on other routers.
 
-    \textit{address} is the network address of the interface on which the OSPF process runs (128.238.0.0 in our case).
+    \item \lstinline{address} is the network address of the interface on which the OSPF process runs (128.238.0.0 in our case).
 
-    \textit{wildcard-mask} helps reduce the number of configuration commands.
+    \item \lstinline{wildcard-mask} helps reduce the number of configuration commands.
     0 is a match and 1 is a \textit{don’t care} bit (0.0.255.255 in our case).
-
-    \textit{area-id} is the number of the area that the interfaces belong to (see Figure 4.7).
+    
+    \item \lstinline{area-id} is the number of the area that the interfaces belong to (see Figure 4.7).
     It can be any integer between 0 and $2^{32} - 1$ or can have an IP address form.
-    Note that 0 is reserved for the backbone. 
-
+    Note that 0 is reserved for the backbone.
+\end{itemize}
+ 
     The above commands are required to configure OSPF, while other tasks (configuring interface parameters, configuring area parameters, etc.) are optional.
     For more information on other configuration tasks, refer to the router manual. 
 
     Consider Figure 4.13 for our OSPF experiment.
-    The lab instructor should reboot the routers to restore their default configurations.
+
     \begin{figure}[H]
         \centering
         \begin{tikzpicture}
@@ -465,7 +464,7 @@ ip route network net-mask next-hup
 
 \part{\texttt{traceroute} Experiment}
 \section{\texttt{traceroute} multi-hop path}
-    Execute \lstinline[emph={your-host, remote-host}]{tcpdump -enx -s 100 host your-host and remote-host} on your host, where \textit{remote-host} is a workstation at least two hops away. 
+    Execute \lstinline[emph={your-host, remote-host}]{tcpdump -env host your-host and remote-host} on your host, where \textit{remote-host} is a workstation at least two hops away. 
 
     Then, execute \lstinline[emph={your-host, remote-host}]{traceroute remote-host} to find the route from your host to the remote host. 
 
