fix paragraphs' spacing

--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -163,8 +163,11 @@ arp -d remote-host
 \section{ARP Proxy}
     The network topology for this proxy ARP exercise is shown in Fig. 2.9. The IP addresses and network masks for the hosts are also given in Fig. 2.9. Change the IP address and network mask of your host accordingly (see Section 2.3.2). Change the IP addresses and network masks of the \textit{Router4} interfaces according to Fig. 2.9.
 
-    \paragraph{Note} Network mask of the hosts in the 128.238.65.0 network is 255.255.0.0.
-    \paragraph{Note} Only use \textit{h0, h1, h4, h5} hosts (Do not start extra hosts).\\
+    \textbf{Note}\quad
+    Network mask of the hosts in the 128.238.65.0 network is 255.255.0.0.
+    
+    \textbf{Note}\quad
+    Only use \textit{h0, h1, h4, h5} hosts (Do not start extra hosts).
 
     Set IP of each network by running the following command in the hosts:
     \begin{enumerate}
